--- a/mygirl.tech_wide_screen_v1.xx.user.css
+++ b/mygirl.tech_wide_screen_v1.xx.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           MyGirl: Wide screen + customisations v1.xx
 @description    Put MyGirl on whole page for screen and add customisations features.
-@namespace      userstyles.world/user/breat
+@namespace      https://github.com/breatfr/MyGirl
 @version        1.00
 @author         BreatFR
 @license        GNU GPL v3 (https://www.gnu.org/licenses/quick-guide-gplv3.en.html)
